objects/LLC_BI__Spread_Statement_Record_Group__c.object
<CustomObject>
    <fields>
        <fullName>LLC_BI__Accumulate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Accumulate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_Linked__c</fullName>
        <formula>LLC_BI__Spread_Statement_Record__r.LLC_BI__Is_Linked__c</formula>
        <label>Is Linked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Name_Override__c</fullName>
        <label>Name Override</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Period_Out_Of_Range__c</fullName>
        <formula>IF(
  OR(
    OR(
      LLC_BI__Year__c &gt; Year(LLC_BI__Spread_Statement_Record__r.LLC_BI__Spread_Statement_Type__r.LLC_BI__End_Date__c),
      AND(LLC_BI__Year__c = Year(LLC_BI__Spread_Statement_Record__r.LLC_BI__Spread_Statement_Type__r.LLC_BI__End_Date__c), 
	OR(
	  AND(LLC_BI__Quarter__c != 0,  LLC_BI__Quarter__c &gt; LLC_BI__Spread_Statement_Record__r.LLC_BI__Spread_Statement_Type__r.LLC_BI__End_Date_Quarter__c)
	)
      )
    ),
    OR(
      LLC_BI__Year__c &lt; Year(LLC_BI__Spread_Statement_Record__r.LLC_BI__Spread_Statement_Type__r.LLC_BI__Start_Date__c),
      AND(LLC_BI__Year__c = Year(LLC_BI__Spread_Statement_Record__r.LLC_BI__Spread_Statement_Type__r.LLC_BI__Start_Date__c), 
	OR(
	  AND(LLC_BI__Quarter__c != 0, LLC_BI__Quarter__c &lt; LLC_BI__Spread_Statement_Record__r.LLC_BI__Spread_Statement_Type__r.LLC_BI__Start_Date_Quarter__c)
	)
      )
    )
  ), 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Period Out Of Range</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Quarter__c</fullName>
        <label>Quarter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Spread_Statement_Record__c</fullName>
        <label>Spread Statement Record</label>
        <referenceTo>LLC_BI__Spread_Statement_Record__c</referenceTo>
        <relationshipName>Spread_Statement_Record_Groups</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Value__c</fullName>
        <label>Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Year_Out_Range__c</fullName>
        <formula>IF(OR(LLC_BI__Year__c &gt; Year( LLC_BI__Spread_Statement_Record__r.LLC_BI__Spread_Statement_Type__r.LLC_BI__End_Date__c),LLC_BI__Year__c &lt; Year( LLC_BI__Spread_Statement_Record__r.LLC_BI__Spread_Statement_Type__r.LLC_BI__Start_Date__c )), 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Year Out Range</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Year__c</fullName>
        <label>Year</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__lookupKey__c</fullName>
        <externalId>true</externalId>
        <label>lookupKey</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>-D Spread Statement Record Group</label>
    <nameField>
        <displayFormat>{000000000}</displayFormat>
        <label>Spread Statement Record Group Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>-D Spread Statement Record Groups</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>